--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -2243,17 +2243,15 @@
             data: {
                 datasets: [{
                     label: 'Label1',
-                    // backgroundColor: color(chartColors.blue).alpha(0.5).rgbString(),
-                    // borderColor: details.color,
                     borderColor: window.chartColors.red,
+                    backgroundColor: window.chartColors.red,
                     fill: false,
                     cubicInterpolationMode: 'monotone',
                     data: [],
                 }, {
                     label: 'Label 2',
-                    // backgroundColor: color(chartColors.blue).alpha(0.5).rgbString(),
-                    // borderColor: details.color,
                     borderColor: window.chartColors.blue,
+                    backgroundColor: window.chartColors.blue,
                     fill: false,
                     cubicInterpolationMode: 'monotone',
                     data: [],
@@ -2312,17 +2310,15 @@
             data: {
                 datasets: [{
                     label: 'Label1',
-                    // backgroundColor: color(chartColors.blue).alpha(0.5).rgbString(),
-                    // borderColor: details.color,
                     borderColor: window.chartColors.green,
+                    backgroundColor: window.chartColors.green,
                     fill: false,
                     cubicInterpolationMode: 'monotone',
                     data: [],
                 }, {
                     label: 'Label 2',
-                    // backgroundColor: color(chartColors.blue).alpha(0.5).rgbString(),
-                    // borderColor: details.color,
                     borderColor: window.chartColors.purple,
+                    backgroundColor: window.chartColors.purple,
                     fill: false,
                     cubicInterpolationMode: 'monotone',
                     data: [],
