--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -1134,10 +1134,18 @@
 
     //getScheduleDatabase();
 
+
+    ///////////////////////////////////////////////////////////////////////////////////////
+    ///////////////////////////////////////////////////////////////////////////////////////
+    ////////////////////////////      Window Load      ////////////////////////////////////
+    ///////////////////////////////////////////////////////////////////////////////////////
+    ///////////////////////////////////////////////////////////////////////////////////////
+
     window.onload = function () {
         var myVar = setInterval(timer, 1000);
 
         // 0: this month, -1: last month, 1: next month
+        // From Example Data
         createCalendar(0);
 
         // thisCalendar()
