--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -603,7 +603,7 @@
                     </div>
 
                     <div style="width: 25%; height: 100%; position: relative;">
-                        <div id="ioc-value" style="position: relative; text-align: center;">81.25MHz</div>
+                        <div id="ioc-value" style="position: relative; text-align: center;"></div>
                     </div>
 
                     <div style="width: 50%; height: 100%; position: relative;">
