--- a/raon-control/login.html
+++ b/raon-control/login.html
@@ -65,10 +65,13 @@
     var serverAddr = 'http://192.168.68.126:9014';
 
     function login() {
-        var id = document.getElementById('particle');
-        id.classList.remove('beforeLogin');
-        void id.offsetWidth;
-        id.classList.add('afterLogin');
+        // var id = document.getElementById('particle');
+        // id.classList.remove('beforeLogin');
+        // void id.offsetWidth;
+        // id.classList.add('afterLogin');
+        document.getElementById('particle').style.transition = 'all 1s ease-in';
+        document.getElementById('particle').style.left = '-800px';
+
     }
 
     function signin() {
@@ -105,6 +108,15 @@
 
     window.onload = function() {
         // setInterval(timer, 1000);
+        var raonBoxID = document.getElementById('raon-box');
+
+        document.getElementById('particle').style.left = '800px';
+        raonBoxID.style.opacity = '1.0';
+        // raonBoxID.style.filter = 'blur(0px)';
+        // raonBoxID.style.transform = 'scale(1)';
+
+        document.getElementById('control-system').style.opacity = '1.0';
+
     }
 </script>
 
