--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -171,7 +171,7 @@
 
 	// scwook Server
 	var serverAddr = 'http://192.168.68.126'
-	var imageServer = serverAddr + ':4879/image/'
+	var imageServer = serverAddr + ':4879/asset_image/'
 	var inventoryAddr = serverAddr + ':8080/inventory'
 	var retrieveAddr = inventoryAddr + '/retrieve/*';
 	var insertAddr = inventoryAddr + '/insert';
