--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -400,10 +400,10 @@
         var myVar = setInterval(timer, 1000);
 
         // From Server
-        // getEventDataFromDB();
+        getEventDataFromDB();
 
         // From Example Data
-        createCalendar(0);
+        // createCalendar(0);
 
         // Test Chart
         const labels = [
