--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -370,7 +370,7 @@
         <div class="body-left" style="width:660px; height:780px;">
             <div class="body-left-grid">
                 <div class="grid-item fade-animation"
-                    style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
+                    style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2; ">
                     <svg width="622" height="162" style="position: absolute; top:-1px; left:-1px;">
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
@@ -2219,7 +2219,7 @@
     ////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////
+    /////////////    window load        ////////////////////
     ////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////
