--- a/raon-control/bab.html
+++ b/raon-control/bab.html
@@ -733,7 +733,7 @@
     xhttp.onreadystatechange = function () {
       if (this.readyState == 4 && this.status == 200) {
         babListJSON = JSON.parse(this.responseText);
-        // setTimeout(createBabList, 4000, babListJSON);
+        setTimeout(createBabList, 4000, babListJSON);
         // createBabList(babListJSON);
       }
     };
