--- a/raon-control/member.html
+++ b/raon-control/member.html
@@ -54,7 +54,7 @@
         <svg width="10" height="10">
           <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px;">Control Lab. Room 1</div>
+        <div style="margin-left:5px;">Control Lab. Room 13</div>
       </div>
       <div class="email">
         <svg width="10" height="7.5">
@@ -83,13 +83,13 @@
       <img class="avatar" src="images/profile-image.svg">
       <div class="name">Choi, YongJun</div>
       <div class="title">Senior Enginner</div>
-      <div class="task">Timing System</div>
-      <div class="task">Control Network Design</div>
+      <div class="task">Local System Interface</div>
+      <div class="task">Slow Protection System</div>
       <div class="location">
         <svg width="10" height="10">
           <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px;">Control Lab. Room 2</div>
+        <div style="margin-left:5px;">Control Lab. Room 11</div>
       </div>
       <div class="email">
         <svg width="10" height="7.5">
@@ -118,13 +118,13 @@
       <img class="avatar" src="images/profile-image.svg">
       <div class="name">Kim, YongHak</div>
       <div class="title">Research Fellow</div>
-      <div class="task">Timing System</div>
-      <div class="task">Control Network Design</div>
+      <div class="task">Local System Interface</div>
+      <div class="task">EPICS IOC Development</div>
       <div class="location">
         <svg width="10" height="10">
           <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px;">Control Lab. Room 3</div>
+        <div style="margin-left:5px;">Control Lab. Room 8</div>
       </div>
       <div class="email">
         <svg width="10" height="7.5">
@@ -159,7 +159,7 @@
         <svg width="10" height="10">
           <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px;">Control Lab. Room 4</div>
+        <div style="margin-left:5px;">Control Lab. Room 12</div>
       </div>
       <div class="email">
         <svg width="10" height="7.5">
@@ -194,7 +194,7 @@
         <svg width="10" height="10">
           <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px;">Control Lab. Room 5</div>
+        <div style="margin-left:5px;">Control Lab. Room 10</div>
       </div>
       <div class="email">
         <svg width="10" height="7.5">
