--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -1035,6 +1035,24 @@
                 <div class="slide-page-title">Module</div>
                 <div class="grid-container">
                     <div class="grid-item grid-1x1">
+                        <div class="page3">이</div>
+                    </div>
+                    <div class="grid-item grid-1x1">
+                        <div class="page3">겨</div>
+                    </div>
+                    <div class="grid-item grid-1x1">
+                        <div class="page3">내</div>
+                    </div>
+                    <div class="grid-item grid-1x1">
+                        <div class="page3">야</div>
+                    </div>
+                    <div class="grid-item grid-1x1">
+                        <div class="page3">쥐</div>
+                    </div>
+                    <div class="grid-item grid-1x1">
+                        <div class="page3">~^^</div>
+                    </div>
+                    <div class="grid-item grid-1x1">
                         <div class="page3">대</div>
                     </div>
                     <div class="grid-item grid-1x1">
@@ -1053,40 +1071,22 @@
                         <div class="page3">라</div>
                     </div>
                     <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
+                        <div class="page3">미</div>
                     </div>
                     <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
+                        <div class="page3">중</div>
                     </div>
                     <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
+                        <div class="page3">상</div>
                     </div>
                     <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
+                        <div class="page3">바</div>
                     </div>
                     <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
+                        <div class="page3">보</div>
                     </div>
                     <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
-                    </div>
-                    <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
-                    </div>
-                    <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
-                    </div>
-                    <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
-                    </div>
-                    <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
-                    </div>
-                    <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
-                    </div>
-                    <div class="grid-item grid-1x1">
-                        <div class="page3">대</div>
+                        <div class="page3">!!!</div>
                     </div>
                 </div>
             </div>
