--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -62,7 +62,7 @@
 
         <!-- Left -->
         <div id="body-left">
-            <div class="title-box" style="display: inline-block;">Time Leap</div>
+            <div class="title-box" style="display: inline-block;">Event</div>
             <div id="event-button-container">
                 <!-- <button class="event-config-button" onclick="createNewEventSet()">New</button> -->
                 <!-- <button class="event-config-button" onclick="showSnapshotCompareTable()">Compare</button> -->
